--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Interfaz de Usuario</h1>
+        <h1>Código de Desbloqueo celda 1</h1>
         <div class="login-form">
             <label for="password">Contraseña:</label>
             <input type="password" id="password" placeholder="Introduce la contraseña">
-            <button onclick="checkPassword()">Ingresar</button>
+            <button onclick="checkPassword()">Comprobar</button>
         </div>
         <div id="message"></div>
     </div>
