--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         </div>
         <div id="message"></div>
     </div>
+
+    <div class="container">
+        <button class="button" id="prisoner1">Prisionero 1</button>
+        <button class="button" id="prisoner2">Prisionero 2</button>
+        <button class="button" id="prisoner3">Prisionero 3</button>
+        <div id="prisoner-info">
+            <img id="prisoner-photo" src="" alt="Foto del prisionero">
+        <link rel="stylesheet" href="styles2.css">
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
